# CoffeeBench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
coffeebench/: agent.py  business_app.py  config.py  context_compactor.py  environment.py  event_logger.py  event_loop.py  experiment.py  human_agent.py  human_ui.py  main.py  marketplace.py  show.py  time_manager.py  typings.py  util.py  watch.py  web.py
coffeebench/models/: __init__.py  _retry.py  anthropic_model.py  gemini_model.py  heuristic_roaster_model.py  openai_model.py  openrouter_model.py  passive_model.py  types.py
experiments/: roaster_focal_gemini.toml  roaster_focal_glm.toml  roaster_focal_gpt.toml  roaster_focal_haiku.toml  roaster_focal_heuristic.toml  roaster_focal_kimi.toml  roaster_focal_opus.toml  roaster_focal_passive.toml  roaster_focal_sonnet.toml
