[project]
name = "coffeebench"
version = "0.1.0"
description = "CoffeeBench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-adk>=1.20.0",
    "google-genai>=1.54.0",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.3",
    "streamlit>=1.56.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coffeebench"]
